--- a/doc/ExpRisk_Report.Rmd
+++ b/doc/ExpRisk_Report.Rmd
@@ -5,7 +5,7 @@ date: "3/22/2022"
 header-includes:
    - \usepackage{multirow}
    - \usepackage{xcolor}
-output: pdf_document
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
@@ -23,13 +23,13 @@ This dataset contains the result from 6 experimental sessions.
 
 ```{r, echo=FALSE}
 load('../data/ExperienceRisk_Sessions.RData')
-#head(ExperienceRisk_Sessions)
+#head(ExperienceRisk)
 ```
 
 
 ```{r, include=FALSE}
 Averges_per_Session <- 
-  ExperienceRisk_Sessions %>% 
+  ExperienceRisk %>% 
   group_by(Session) %>% 
   summarise(N=n(), 
             Age = mean(Age),
@@ -71,7 +71,7 @@ The 24 periods of realizations didn't affected the final payoff, but one of them
 ### G2 - G1
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          select(Gamble.1,Gamble.2) %>% 
          gather("Gamble_Order","Gamble") ) + 
   geom_bar(aes(x = factor(Gamble),fill = Gamble_Order),position="dodge")+
@@ -81,7 +81,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 The direction of the change is driven mostly by people choosing gamble 3 at the beginning and moving upwards.
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_bar(aes(x = factor(Gamble.1),fill = factor(sign_gamble)),position="dodge")+
   labs(x = "Gamble Number",fill= "Directional \nChange of \nGamble")
 ```
@@ -89,7 +89,7 @@ ggplot(data = ExperienceRisk_Sessions) +
 When analyzing the magnitude of the direction, it is clear that the main effect is driven by people moving from gamble 3 to gamble 4 (11 participants), and from gamble 4 to gamble 5 (8 participants).
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_bar(aes(x = factor(Gamble.1),
                fill = factor(simple_diff)),
            position="dodge",
@@ -100,11 +100,11 @@ ggplot(data = ExperienceRisk_Sessions) +
 
 The Wilcox test shows that the difference is significant at 5% when analyzing the hypothesis that Gamble 2 is greater. 
 ```{r}
-wilcox.test(x = ExperienceRisk_Sessions$simple_diff,alternative = "greater")
+wilcox.test(x = ExperienceRisk$simple_diff,alternative = "greater")
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_bar(aes(x = factor(simple_diff),
                fill = factor(Gamble.1)),
            position="dodge",
@@ -116,7 +116,7 @@ ggplot(data = ExperienceRisk_Sessions) +
 ### EP1 - EP2
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          select(Exp_Payoffs_G1,Exp_Payoffs_G2) %>% 
          gather("Gamble_EP","Gamble") ) + 
   geom_bar(aes(x = factor(Gamble),fill = Gamble_EP),position="dodge")+
@@ -124,19 +124,19 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_bar(aes(x = factor(Exp_Payoffs_G1),fill = factor(sign_exp_payoff)),position="dodge")+
   labs(x = "Gamble 1's Expected Payoff",fill= "Directional \nChange of \nGamble")
 ```
 
 The Wilcox test shows that the difference is significant at 10% when analyzing the hypothesis that Gamble 2 is greater. 
 ```{r}
-wilcox.test(x = ExperienceRisk_Sessions$diff_Exp_Payoffs,alternative = "greater")
+wilcox.test(x = ExperienceRisk$diff_Exp_Payoffs,alternative = "greater")
 ```
 
 
 ```{r}
-ExperienceRisk_Sessions %>% tabyl(Gamble.1,Gamble.2)
+ExperienceRisk %>% tabyl(Gamble.1,Gamble.2)
 ```
 
 
@@ -144,7 +144,7 @@ ExperienceRisk_Sessions %>% tabyl(Gamble.1,Gamble.2)
 
 ### Gamble 1 - Gamble 2
 ```{r}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_point(aes(x=numEven_all,y=simple_diff))
 ```
 
@@ -152,7 +152,7 @@ ggplot(data = ExperienceRisk_Sessions) +
 ```{r}
 m1 <- lm(simple_diff ~ 
            numEven_all,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 summary(m1)
 ```
 
@@ -161,14 +161,14 @@ There is no significant effect of the overall number of events on the difference
 ```{r}
 m1 <- lm(simple_diff ~ 
            numEven_all,
-         data = ExperienceRisk_Sessions %>% filter(sum_correct_payoffs>18) )
+         data = ExperienceRisk %>% filter(sum_correct_payoffs>18) )
 summary(m1)
 ```
 
 
 ### Excpected Payoff 1 - Expected Payoff 2
 ```{r, echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_point(aes(y=diff_Exp_Payoffs,x=numEven_all))
 ```
 
@@ -176,7 +176,7 @@ ggplot(data = ExperienceRisk_Sessions) +
 ```{r,echo=FALSE}
 m1 <- lm(diff_Exp_Payoffs ~ 
            numEven_all,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 summary(m1)
 ```
 
@@ -186,7 +186,7 @@ There is no significant effect of the overall number of events on the difference
 
 
 ```{r}
-ExperienceRisk_Sessions %>% 
+ExperienceRisk %>% 
   mutate(G1 = factor(Gamble.1),
          CRT = factor(CR.Payoff)) %>% 
   tabyl(G1,CRT)
@@ -194,7 +194,7 @@ ExperienceRisk_Sessions %>%
 
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(CR.Payoff==0) %>% 
          select(Gamble.1,Gamble.2) %>% 
          gather("Gamble_Order","Gamble") ) + 
@@ -203,7 +203,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(CR.Payoff>=0) %>% 
          select(Gamble.1,Gamble.2) %>% 
          gather("Gamble_Order","Gamble") ) + 
@@ -216,14 +216,14 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ### G2 - G1
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_bar(aes(x = factor(Gamble.1),fill = factor(CR.Payoff)),position="dodge")+
   labs(x = "Gamble 1",fill= "CRT \nScore")
 ```
 
 
 ```{r, echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_boxplot(aes(y=simple_diff,x=factor(CR.Payoff)))
 ```
 
@@ -231,7 +231,7 @@ ggplot(data = ExperienceRisk_Sessions) +
 ```{r,echo=FALSE}
 m1 <- lm(simple_diff ~ 
            CR.Payoff>0,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 summary(m1)
 ```
 
@@ -241,21 +241,21 @@ This effect in not longer significant if the regression include all the levels o
 ```{r,echo=FALSE}
 m1 <- lm(simple_diff ~ 
            CR.Payoff,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 summary(m1)
 ```
 
 ### EP2 - EP1
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_bar(aes(x = factor(Exp_Payoffs_G1),fill = factor(CR.Payoff)),position="dodge")+
   labs(x = "Gamble 1' Expected Payoff",fill= "CRT \nScore")
 ```
 
 
 ```{r, echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_boxplot(aes(y=diff_Exp_Payoffs,x=factor(CR.Payoff)))
 ```
 
@@ -263,7 +263,7 @@ ggplot(data = ExperienceRisk_Sessions) +
 ```{r,echo=FALSE}
 m1 <- lm(diff_Exp_Payoffs ~ 
            CR.Payoff>0,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 summary(m1)
 ```
 
@@ -273,14 +273,14 @@ If people got at least one point, they will increase by one the number of the ga
 ## Effects of history
 
 ```{r}
-ggplot(data = ExperienceRisk_Sessions) + 
+ggplot(data = ExperienceRisk) + 
   geom_point(aes(x=mean_payoff_periods,y=simple_diff))
 ```
 
 ```{r}
 m1 <- lm(diff_Exp_Payoffs ~ 
            mean_payoff_periods,
-         data = ExperienceRisk_Sessions %>% filter(CR.Payoff!=0) )
+         data = ExperienceRisk %>% filter(CR.Payoff!=0) )
 summary(m1)
 ```
 
@@ -292,7 +292,7 @@ Male and Female participants moved in the expected direction; both moved towards
 The distribution of gamble choices among men changes towards gamble 6; risk loving. At the beginning, before the experience the distribution was more or less homogeneous between gambles 3 to 6. 
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(Gender=="M") %>% 
          select(Gamble.1,Gamble.2) %>% 
          gather("Gamble_Order","Gamble") ) + 
@@ -301,7 +301,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(Gender=="F") %>% 
          select(Gamble.1,Gamble.2) %>% 
          gather("Gamble_Order","Gamble") ) + 
@@ -311,7 +311,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(Gender=="M"|Gender=="F") %>% 
          select(Gender,Gamble.1) ) + 
   geom_bar(aes(x = factor(Gamble.1),fill = Gender), 
@@ -322,7 +322,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(Gender=="M"|Gender=="F") %>% 
          select(Gender,Gamble.1) ) + 
   geom_density(aes(x = Gamble.1,fill = Gender),
@@ -333,7 +333,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(Gender=="M"|Gender=="F") %>% 
          select(Gender,Gamble.2) ) + 
   geom_bar(aes(x = factor(Gamble.2),fill = Gender),
@@ -344,7 +344,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r,echo=FALSE}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(Gender=="M"|Gender=="F") %>% 
          select(Gender,Gamble.2) ) + 
   geom_density(aes(x = Gamble.2,fill = Gender),
@@ -367,7 +367,7 @@ m2 <- lm(simple_diff ~
            numEven_all+
            explore+
            Session,
-         data = ExperienceRisk_Sessions %>%
+         data = ExperienceRisk %>%
            filter(Gender=="F"|Gender=="M") )
 
 m3 <- lm(simple_diff ~ 
@@ -375,7 +375,7 @@ m3 <- lm(simple_diff ~
            Gender +
            CR.Payoff +
            sum_correct_payoffs,
-         data = ExperienceRisk_Sessions%>%
+         data = ExperienceRisk%>%
            filter(Gender=="F"|Gender=="M") )
 
 stargazer(m2, m3,header = F)
@@ -386,7 +386,7 @@ stargazer(m2, m3,header = F)
 m2 <- lm(Gamble.2 ~ 
            middle +
            Gender*CR.Payoff*even,
-         data = ExperienceRisk_Sessions %>% 
+         data = ExperienceRisk %>% 
            filter(Gender %in% c("F","M")) %>% 
            mutate(CR.Payoff= factor(CR.Payoff),
                   even = factor(less_than_12_even*(-1)+1))
@@ -405,12 +405,12 @@ m2 <- lm(diff_Exp_Payoffs ~
            numEven_all+
            explore+
            Session,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 
 m3 <- lm(diff_Exp_Payoffs ~ 
            Gamble.1 +
            sum_correct_payoffs,
-         data = ExperienceRisk_Sessions)
+         data = ExperienceRisk)
 
 stargazer(m2, m3, header = F)
 ```
@@ -419,7 +419,7 @@ stargazer(m2, m3, header = F)
 # CRT = 0
 
 ```{r}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(CR.Payoff!=0) %>% 
          select(Gamble.1,Gamble.2) %>% 
          gather("Gamble_Order","Gamble") ) + 
@@ -429,7 +429,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 
 
 ```{r}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          select(Gamble.1,CR.Payoff) ) + 
   geom_bar(aes(x = factor(Gamble.1),
                fill = factor(CR.Payoff)),
@@ -441,7 +441,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 
 
 ```{r}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          select(Gamble.2,CR.Payoff) ) + 
   geom_bar(aes(x = factor(Gamble.2),
                fill = factor(CR.Payoff)),
@@ -452,7 +452,7 @@ ggplot(data = ExperienceRisk_Sessions %>%
 ```
 
 ```{r}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          select(simple_diff,CR.Payoff) ) + 
   geom_density(aes(x = simple_diff,
                fill = factor(CR.Payoff==0)),
@@ -467,14 +467,14 @@ ggplot(data = ExperienceRisk_Sessions %>%
 m2 <- lm(diff_Exp_Payoffs ~ 
            Gamble.1 +
            less_than_12_even,
-         data = ExperienceRisk_Sessions %>% filter(CR.Payoff==0 & Gender=="F"))
+         data = ExperienceRisk %>% filter(CR.Payoff==0 & Gender=="F"))
 stargazer(m2, header = F, title="Expected Payoff among Females with CRT=0")
 ```
 
 ## effect of history
 
 ```{r}
-ggplot(data = ExperienceRisk_Sessions %>% 
+ggplot(data = ExperienceRisk %>% 
          filter(CR.Payoff!=0) ) + 
   geom_point(aes(x=mean_payoff_periods,y=simple_diff))
 ```
